Project

General

Profile

Actions

Bug #18072

closed

msg/simple/Pipe: error decoding addr

Added by Sage Weil over 7 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel,hammer
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

     0> 2016-11-29 05:33:32.584498 7f1a720fc700 -1 *** Caught signal (Aborted) **
 in thread 7f1a720fc700 thread_name:ms_pipe_write

 ceph version 11.0.2-2069-g64dd4fe (64dd4fe92a3955fe7d98d3de77f7c5174893c745)
 1: (()+0x93db3e) [0x5635db792b3e]
 2: (()+0x113e0) [0x7f1a99b563e0]
 3: (gsignal()+0x38) [0x7f1a9814a428]
 4: (abort()+0x16a) [0x7f1a9814c02a]
 5: (__gnu_cxx::__verbose_terminate_handler()+0x16d) [0x7f1a98a8c84d]
 6: (()+0x8d6b6) [0x7f1a98a8a6b6]
 7: (()+0x8d701) [0x7f1a98a8a701]
 8: (()+0x8d919) [0x7f1a98a8a919]
 9: (entity_addr_t::decode(ceph::buffer::list::iterator&)+0x33a) [0x5635db2a33da]
 10: (Pipe::connect()+0x877) [0x5635dbb34f47]
 11: (Pipe::writer()+0xe84) [0x5635dbb39b84]
 12: (Pipe::Writer::entry()+0xd) [0x5635dbb3c95d]

http://pulpito.ceph.com/sage-2016-11-29_03:30:55-rados-wip-sage-testing---basic-smithi/584472

Related issues 2 (0 open2 closed)

Copied to Ceph - Backport #18108: jewel: msg/simple/Pipe: error decoding addrResolvedAlexey SheplyakovActions
Copied to Ceph - Backport #18109: hammer: msg/simple/Pipe: error decoding addrResolvedNathan CutlerActions
Actions #2

Updated by Sage Weil over 7 years ago

  • Description updated (diff)
Actions #3

Updated by Sage Weil over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 7 years ago

  • Copied to Backport #18108: jewel: msg/simple/Pipe: error decoding addr added
Actions #5

Updated by Nathan Cutler over 7 years ago

  • Copied to Backport #18109: hammer: msg/simple/Pipe: error decoding addr added
Actions #6

Updated by Nathan Cutler over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF